<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_back"
        android:title="@string/back"
        android:icon="@drawable/ic_action_back"
        app:showAsAction="ifRoom"
        android:visible="false" />
    <item
        android:id="@+id/menu_home"
        android:title="@string/home"
        android:icon="@drawable/ic_action_home"
        app:showAsAction="ifRoom"
        android:visible="false" />
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_forward"
        android:title="@string/forward"
        android:icon="@drawable/ic_action_forward"
        app:showAsAction="always"
        android:visible="false" />
</menu>