<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2015 Alefe Souza <contato@alefesouza.com>

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:id="@+id/frame"
	android:fitsSystemWindows="true" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
			android:elevation="@dimen/toolbar_elevation"
			app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
			app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
	<FrameLayout
			android:id="@+id/content_frame"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="#eeeeee">
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:id="@+id/relative"
		android:background="#eeeeee">
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginBottom="56dp">
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/editText1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentTop="true"
				android:layout_centerHorizontal="true"
				android:hint="@string/widgettitle"
				android:ems="10" >
				<requestFocus />
			</EditText>
			
			<TextView
				android:id="@+id/textWidget1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/editText1"
				android:layout_marginTop="10dp"
				android:textColor="#000000"
				android:text="@string/widgeticon" />
			
			<RadioGroup
				android:id="@+id/radioIcon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/textWidget1">
				<RadioButton
					android:id="@+id/radioPreto"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/black"
					android:checked="true" />
				<RadioButton
					android:id="@+id/radioBranco"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/white" />
				<RadioButton
					android:id="@+id/radioCinza"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/grey" />
				<RadioButton
					android:id="@+id/radioIcone"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/rebuappicon" />
			</RadioGroup>
		</RelativeLayout>
	</ScrollView>
	<Button
		android:id="@+id/button1"
		android:layout_width="match_parent"
		android:layout_height="56dp"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:text="@string/createshortcut" />
	</RelativeLayout>
	<View
		android:layout_width="match_parent"
		android:layout_height="4dp"
		android:background="@drawable/toolbar_dropshadow" />
</FrameLayout>
	</LinearLayout>
</FrameLayout>
